# xemu

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  FORK_DIFF.md  Info.plist  Makefile  Makefile.objs  Makefile.target  README.md  ROADMAP.md  RPM_check_version.sh  RPM_package.spec  RPM_package.yml  XEMU_COMMIT  XEMU_VERSION  appveyor.bat  appveyor.yml  block.c  blockdev.c  build.sh  build_linux.sh  build_macos.sh  build_windows.sh  config_spec.yml  configure  cpus.c  do_refactor.py  do_refactor2.py  exec.c  get_deps.py  hmp-commands.hx  memory.c  meson.build  meson_options.txt  pythondeps.toml  qemu-io-cmds.c  toml.cpp  (+7 more)
data/: gen_ui_atlas.sh  meson.build
hw/xbox/: Makefile.objs  OWNERS  acpi_xbox.c  acpi_xbox.h  adpcm.h  adpcm_block.h  amd_smbus.c  amd_smbus.h  chihiro-usb.c  chihiro.c  eeprom_generation.c  eeprom_generation.h  lpc47m157.c  lpcsega.c  mcpx_aci.c  mcpx_apu.c  mcpx_apu.h  meson.build  nv2a.c  nv2a_debug.h  nv2a_int.h  nv2a_psh.c  nv2a_shaders.c  nv2a_shaders.h  nv2a_vsh.c  nvnet.c  nvnet_regs.h  smbus.h  smbus_adm1032.c  smbus_cx25871.c  smbus_fs454.c  smbus_storage.c  smbus_xbox_smc.c  smbus_xcalibur.c  trace-events  trace.h  xblc.c  xblc.h  xbox.c  xbox.h  (+11 more)
hw/xbox/dsp/: Makefile.objs  dsp.c  dsp.h  dsp_cpu.c  dsp_cpu.h  dsp_dma.c  dsp_dma.h  dsp_emu.inl  dsp_state.h
hw/xbox/mcpx/: Makefile.objs  OWNERS  aci.c  adpcm.h  apu.c  apu_debug.h  apu_int.h  apu_regs.h  debug.c  dsp.c  dsp.h  fpconv.h  hrtf.h  meson.build  trace.h  vp.c  vp.h
hw/xbox/nv2a/: Makefile.objs  OWNERS  debug.c  debug.h  debug_gl.h  g-lru-cache.c  g-lru-cache.h  lru.c  lru.h  meson.build  nv2a.c  nv2a.h  nv2a_debug.c  nv2a_debug.h  nv2a_int.h  nv2a_pbus.c  nv2a_pcrtc.c  nv2a_pfb.c  nv2a_pfifo.c  nv2a_pgraph.c  nv2a_pmc.c  nv2a_pramdac.c  nv2a_prmcio.c  nv2a_prmvio.c  nv2a_psh.c  nv2a_psh.h  nv2a_ptimer.c  nv2a_pvideo.c  nv2a_regs.h  nv2a_shaders.c  nv2a_shaders.h  nv2a_shaders_common.h  nv2a_stubs.c  nv2a_user.c  nv2a_vsh.c  nv2a_vsh.h  pbus.c  pcrtc.c  pfb.c  pfifo.c  (+24 more)
hw/xbox/xdvd/: meson.build  xdvd.c  xdvd.h
po/: POTFILES  meson.build  sv.po
subprojects/SPIRV-Reflect/: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  README.md  SECURITY.md  main.cpp  spirv_reflect.c  spirv_reflect.h
subprojects/SPIRV-Reflect/common/: output_stream.cpp  output_stream.h
subprojects/SPIRV-Reflect/examples/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  build_sample_spv_h.sh  common.cpp  common.h  main_descriptors.cpp  main_explorer.cpp  main_hlsl_resource_types.cpp  main_io_variables.cpp  sample.hlsl  sample.spv  sample_spv.h
subprojects/SPIRV-Reflect/tests/: build_all_shaders.py  build_golden_yaml.py  ci_database.py  test-spirv-reflect.cpp
subprojects/dsp56300/: meson.build
subprojects/implot/: .meson-subproject-wrap-hash.txt  meson.build
subprojects/nv2a_vsh_cpu/: .clang-format  .gitignore  CMakeLists.txt  README.md
subprojects/nv2a_vsh_cpu/githooks/: pre-commit
subprojects/nv2a_vsh_cpu/src/: nv2a_vsh_cpu.c  nv2a_vsh_cpu.h  nv2a_vsh_disassembler.c  nv2a_vsh_disassembler.h  nv2a_vsh_emulator.c  nv2a_vsh_emulator.h  nv2a_vsh_emulator_execution_state.c  nv2a_vsh_emulator_execution_state.h
subprojects/packagefiles/libchdr/: meson.build
subprojects/packagefiles/sdl3/: meson.build  windows-opengl-support.patch
subprojects/tomlplusplus/: .clang-format  .editorconfig  .gitattributes  .gitignore  .meson-subproject-wrap-hash.txt  .runsettings  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cpp.hint  meson.build  meson_options.txt  toml++.code-workspace  toml++.natvis  toml++.props  toml++.sln  toml++.vcxproj  toml++.vcxproj.filters  toml.hpp
subprojects/tomlplusplus/.github/: FUNDING.yml  pull_request_template.md
subprojects/tomlplusplus/.tipi/: deps
subprojects/tomlplusplus/cmake/: install-rules.cmake  tomlplusplusConfig.cmake  tomlplusplusConfig.cmake.meson.in  tomlplusplusConfigVersion.cmake.meson.in  variables.cmake
subprojects/tomlplusplus/docs/: poxy.toml
subprojects/tomlplusplus/examples/: CMakeLists.txt  benchmark_data.toml  error_printer.cpp  error_printer.vcxproj  example.toml  examples.hpp  merge_base.toml  merge_overrides.toml  meson.build  parse_benchmark.cpp  parse_benchmark.vcxproj  simple_parser.cpp  simple_parser.vcxproj  toml_generator.cpp  toml_generator.vcxproj  toml_merger.cpp  toml_merger.vcxproj  toml_to_json_transcoder.cpp  toml_to_json_transcoder.vcxproj
subprojects/tomlplusplus/include/: meson.build
subprojects/tomlplusplus/src/: meson.build  toml.cpp
subprojects/tomlplusplus/tests/: at_path.cpp  conformance_burntsushi_invalid.cpp  conformance_burntsushi_valid.cpp  conformance_iarna_invalid.cpp  conformance_iarna_valid.cpp  cpp.hint  for_each.cpp  formatters.cpp  impl_toml.cpp  leakproof.hpp  lib_catch2.hpp  main.cpp  (+27 more)
subprojects/xxHash-0.8.2/: meson.build
subprojects/xxHash-0.8.3/: .meson-subproject-wrap-hash.txt  meson.build  meson_options.txt
tomlplusplus/: CMakeLists.txt  HEAD
tomlplusplus/.github/: pull_request_template.md
tomlplusplus/examples/: parse_benchmark.cpp  toml_to_json_transcoder.cpp
tomlplusplus/src/: toml.cpp
tomlplusplus/tests/: lib_catch2.h  manipulating_arrays.cpp  parsing_booleans.cpp  parsing_spec_example.cpp  parsing_tables.cpp
tomlplusplus/toml-test/: tt_encoder.cpp
tomlplusplus/tools/: ci_single_header_check.py  generate_single_header.py  generate_windows_test_targets.py  version.py
ui/inih/: .travis.yml  HEAD  README.md  ini.c  meson.build
ui/xui/: OWNERS  actions.cc  actions.hh  animation.cc  animation.hh  common.hh  compat.cc  compat.hh  debug.cc  debug.hh  eeprom-editor.cc  eeprom-editor.hh  font-manager.cc  font-manager.hh  gamelist.cc  gamelist.hh  github-issue.cc  github-issue.hh  gl-helpers.cc  gl-helpers.hh  i18n.hh  input-manager.cc  input-manager.hh  main-menu.cc  main-menu.hh  main.cc  menu-system.cc  menu-system.hh  menubar.cc  menubar.hh  meson.build  misc.cc  misc.hh  monitor.cc  monitor.hh  multiplayer-wizard.cc  multiplayer-wizard.hh  notifications.cc  notifications.hh  popup-menu-draw.cc  (+22 more)
(+1554 files in other folders)
